packages/teleparse/tests/ui/lex_no_dupe_literal.stderr
error: Duplicate literal pattern `0` for variant `Integer`.
 --> tests/ui/lex_no_dupe_literal.rs:4:48
  |
4 |     #[teleparse(terminal(Zero = "0", Another = "0"))]
  |                                                ^^^
