packages/teleparse/tests/ui/lex_no_dupe_literal.rs
use teleparse::prelude::*;
#[derive_lexicon]
pub enum MyToken {
    #[teleparse(terminal(Zero = "0", Another = "0"))]
    Integer,
}
fn main() {}
